// Package vm provides distributed state coordination for VM operations
package vm

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/khryptorgraphics/novacron/backend/core/federation"
	"github.com/pkg/errors"
	"go.uber.org/zap"
)

// DistributedStateCoordinator orchestrates all distributed state operations
type DistributedStateCoordinator struct {
	mu                  sync.RWMutex
	logger              *zap.Logger
	nodeID              string
	shardingManager     *VMStateShardingManager
	memoryDistribution  *MemoryStateDistribution
	federationManager   federation.FederationManager
	transactionManager  *DistributedTransactionManager
	conflictResolver    *ConflictResolver
	optimizer           *GlobalOptimizer
	monitor             *StateMonitor
	recoveryCoordinator *RecoveryCoordinator
	apiServer           *StateAPIServer
	eventBus            *EventBus
	metrics             *CoordinatorMetrics
}

// DistributedTransactionManager manages distributed transactions
type DistributedTransactionManager struct {
	mu           sync.RWMutex
	transactions map[string]*DistributedTransaction
	lockManager  *DistributedLockManager
	logManager   *TransactionLog
}

// DistributedTransaction represents a distributed state transaction
type DistributedTransaction struct {
	ID            string
	Type          TransactionType
	State         TransactionState
	Participants  []string
	Operations    []StateOperation
	VectorClock   map[string]uint64
	StartTime     time.Time
	CommitTime    time.Time
	RollbackLog   []RollbackOperation
}

// TransactionType defines the type of transaction
type TransactionType int

const (
	TransactionTypeStateMigration TransactionType = iota
	TransactionTypeMemorySync
	TransactionTypeCrossClusterReplication
	TransactionTypeRecovery
	TransactionTypeRebalancing
)

// TransactionState represents transaction state
type TransactionState int

const (
	TransactionStatePreparing TransactionState = iota
	TransactionStatePrepared
	TransactionStateCommitting
	TransactionStateCommitted
	TransactionStateAborting
	TransactionStateAborted
)

// ConflictResolver handles conflict resolution for concurrent modifications
type ConflictResolver struct {
	mu              sync.RWMutex
	vectorClocks    map[string]map[string]uint64
	conflictHistory []*ConflictRecord
	strategies      map[ConflictType]ResolutionStrategy
}

// GlobalOptimizer optimizes global state placement and migration
type GlobalOptimizer struct {
	mu              sync.RWMutex
	aiPredictor     *AIPredictionEngine
	costModel       *CostModel
	placementEngine *PlacementOptimizer
	migrationPlanner *MigrationPlanner
}

// StateMonitor provides monitoring and observability
type StateMonitor struct {
	mu                sync.RWMutex
	performanceMetrics *PerformanceMetrics
	consistencyChecker *ConsistencyChecker
	errorTracker      *ErrorTracker
	alertManager      *AlertManager
}

// RecoveryCoordinator coordinates recovery operations
type RecoveryCoordinator struct {
	mu              sync.RWMutex
	failureDetector *FailureDetector
	recoveryPlans   map[string]*RecoveryPlan
	checkpoints     map[string]*StateCheckpoint
	recoveryLog     *RecoveryEventLog
}

// StateAPIServer provides unified API for state operations
type StateAPIServer struct {
	coordinator *DistributedStateCoordinator
	grpcServer  *GRPCServer
	restServer  *RESTServer
}

// NewDistributedStateCoordinator creates a new distributed state coordinator
func NewDistributedStateCoordinator(
	logger *zap.Logger,
	nodeID string,
	shardingManager *VMStateShardingManager,
	memoryDistribution *MemoryStateDistribution,
	federationManager federation.FederationManager,
) *DistributedStateCoordinator {
	coordinator := &DistributedStateCoordinator{
		logger:              logger,
		nodeID:              nodeID,
		shardingManager:     shardingManager,
		memoryDistribution:  memoryDistribution,
		federationManager:   federationManager,
		transactionManager:  NewDistributedTransactionManager(),
		conflictResolver:    NewConflictResolver(),
		optimizer:           NewGlobalOptimizer(),
		monitor:             NewStateMonitor(),
		recoveryCoordinator: NewRecoveryCoordinator(),
		eventBus:            NewEventBus(),
		metrics:             NewCoordinatorMetrics(),
	}

	coordinator.apiServer = NewStateAPIServer(coordinator)

	// Start background services
	go coordinator.runConsistencyChecker()
	go coordinator.runOptimizer()
	go coordinator.runFailureDetector()

	return coordinator
}

// MigrateVMState orchestrates VM state migration across nodes and clusters
func (c *DistributedStateCoordinator) MigrateVMState(ctx context.Context, vmID, targetNode string, options MigrationOptions) error {
	c.mu.Lock()
	defer c.mu.Unlock()

	c.logger.Info("Orchestrating VM state migration",
		zap.String("vmID", vmID),
		zap.String("targetNode", targetNode))

	// Start distributed transaction
	tx, err := c.transactionManager.BeginTransaction(TransactionTypeStateMigration)
	if err != nil {
		return errors.Wrap(err, "failed to begin transaction")
	}
	defer c.transactionManager.EndTransaction(tx)

	// Phase 1: Prepare migration
	preparePlan, err := c.prepareMigration(ctx, vmID, targetNode, options)
	if err != nil {
		tx.State = TransactionStateAborting
		return errors.Wrap(err, "failed to prepare migration")
	}

	// Phase 2: Lock resources
	locks, err := c.transactionManager.lockManager.AcquireLocks(preparePlan.RequiredLocks)
	if err != nil {
		tx.State = TransactionStateAborting
		return errors.Wrap(err, "failed to acquire locks")
	}
	defer c.transactionManager.lockManager.ReleaseLocks(locks)

	// Phase 3: Execute migration components in parallel
	migrationTasks := []func() error{
		func() error { return c.migrateVMStateShards(ctx, vmID, targetNode) },
		func() error { return c.migrateMemoryState(ctx, vmID, targetNode, options) },
		func() error { return c.migrateNetworkState(ctx, vmID, targetNode) },
		func() error { return c.updateFederationState(ctx, vmID, targetNode) },
	}

	errChan := make(chan error, len(migrationTasks))
	var wg sync.WaitGroup

	for _, task := range migrationTasks {
		wg.Add(1)
		go func(fn func() error) {
			defer wg.Done()
			if err := fn(); err != nil {
				errChan <- err
			}
		}(task)
	}

	wg.Wait()
	close(errChan)

	// Check for errors
	for err := range errChan {
		if err != nil {
			tx.State = TransactionStateAborting
			c.rollbackMigration(ctx, tx)
			return err
		}
	}

	// Phase 4: Commit transaction
	tx.State = TransactionStateCommitting
	if err := c.transactionManager.CommitTransaction(tx); err != nil {
		c.rollbackMigration(ctx, tx)
		return errors.Wrap(err, "failed to commit transaction")
	}

	// Phase 5: Update monitoring and metrics
	c.monitor.RecordMigration(vmID, targetNode, time.Since(tx.StartTime))
	c.metrics.MigrationsCompleted.Inc()

	c.logger.Info("VM state migration completed successfully",
		zap.String("vmID", vmID),
		zap.String("targetNode", targetNode),
		zap.Duration("duration", time.Since(tx.StartTime)))

	return nil
}

// ResolveConflict resolves conflicts in distributed state
func (c *DistributedStateCoordinator) ResolveConflict(ctx context.Context, conflict *StateConflict) (*ConflictResolution, error) {
	c.mu.Lock()
	defer c.mu.Unlock()

	c.logger.Info("Resolving state conflict",
		zap.String("conflictID", conflict.ID),
		zap.String("type", conflict.Type.String()))

	// Determine resolution strategy
	strategy := c.conflictResolver.GetStrategy(conflict.Type)
	if strategy == nil {
		return nil, errors.New("no resolution strategy available")
	}

	// Apply resolution strategy
	resolution, err := strategy.Resolve(conflict)
	if err != nil {
		return nil, errors.Wrap(err, "failed to resolve conflict")
	}

	// Record conflict resolution
	c.conflictResolver.RecordResolution(conflict, resolution)

	// Apply resolution to state
	if err := c.applyResolution(ctx, resolution); err != nil {
		return nil, errors.Wrap(err, "failed to apply resolution")
	}

	c.metrics.ConflictsResolved.Inc()
	return resolution, nil
}

// OptimizeStatePlacement optimizes global state placement
func (c *DistributedStateCoordinator) OptimizeStatePlacement(ctx context.Context) (*OptimizationPlan, error) {
	c.mu.Lock()
	defer c.mu.Unlock()

	c.logger.Info("Optimizing global state placement")

	// Collect current state distribution
	currentState, err := c.collectGlobalState()
	if err != nil {
		return nil, errors.Wrap(err, "failed to collect global state")
	}

	// Get AI predictions for access patterns
	predictions, err := c.optimizer.aiPredictor.PredictAccessPatterns(currentState)
	if err != nil {
		c.logger.Warn("Failed to get AI predictions", zap.Error(err))
		predictions = nil
	}

	// Calculate optimal placement
	plan, err := c.optimizer.placementEngine.CalculateOptimalPlacement(currentState, predictions)
	if err != nil {
		return nil, errors.Wrap(err, "failed to calculate optimal placement")
	}

	// Validate plan feasibility
	if err := c.validateOptimizationPlan(plan); err != nil {
		return nil, errors.Wrap(err, "optimization plan validation failed")
	}

	// Execute optimization plan
	if err := c.executeOptimizationPlan(ctx, plan); err != nil {
		return nil, errors.Wrap(err, "failed to execute optimization plan")
	}

	c.metrics.OptimizationsCompleted.Inc()
	return plan, nil
}

// HandleFailure handles various failure scenarios
func (c *DistributedStateCoordinator) HandleFailure(ctx context.Context, failure *FailureEvent) error {
	c.mu.Lock()
	defer c.mu.Unlock()

	c.logger.Error("Handling failure event",
		zap.String("type", failure.Type.String()),
		zap.String("nodeID", failure.NodeID))

	// Determine recovery plan
	plan, err := c.recoveryCoordinator.CreateRecoveryPlan(failure)
	if err != nil {
		return errors.Wrap(err, "failed to create recovery plan")
	}

	// Execute recovery plan
	tx, err := c.transactionManager.BeginTransaction(TransactionTypeRecovery)
	if err != nil {
		return errors.Wrap(err, "failed to begin recovery transaction")
	}
	defer c.transactionManager.EndTransaction(tx)

	// Execute recovery steps
	for _, step := range plan.Steps {
		if err := c.executeRecoveryStep(ctx, step); err != nil {
			c.logger.Error("Recovery step failed",
				zap.String("step", step.Name),
				zap.Error(err))
			tx.State = TransactionStateAborting
			return errors.Wrapf(err, "recovery step %s failed", step.Name)
		}
	}

	// Commit recovery
	tx.State = TransactionStateCommitting
	if err := c.transactionManager.CommitTransaction(tx); err != nil {
		return errors.Wrap(err, "failed to commit recovery")
	}

	c.metrics.RecoveriesCompleted.Inc()
	return nil
}

// GetStateStatus provides comprehensive state status
func (c *DistributedStateCoordinator) GetStateStatus(ctx context.Context, vmID string) (*StateStatus, error) {
	c.mu.RLock()
	defer c.mu.RUnlock()

	status := &StateStatus{
		VMID:      vmID,
		Timestamp: time.Now(),
	}

	// Get sharding status
	shardingStatus, err := c.getShardingStatus(vmID)
	if err != nil {
		c.logger.Warn("Failed to get sharding status", zap.Error(err))
	}
	status.ShardingStatus = shardingStatus

	// Get memory distribution status
	memoryStatus, err := c.getMemoryStatus(vmID)
	if err != nil {
		c.logger.Warn("Failed to get memory status", zap.Error(err))
	}
	status.MemoryStatus = memoryStatus

	// Get federation status
	federationStatus, err := c.getFederationStatus(vmID)
	if err != nil {
		c.logger.Warn("Failed to get federation status", zap.Error(err))
	}
	status.FederationStatus = federationStatus

	// Get consistency status
	consistencyStatus := c.monitor.consistencyChecker.CheckConsistency(vmID)
	status.ConsistencyStatus = consistencyStatus

	// Get performance metrics
	status.PerformanceMetrics = c.monitor.performanceMetrics.GetMetrics(vmID)

	return status, nil
}

// Background services

func (c *DistributedStateCoordinator) runConsistencyChecker() {
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			c.checkGlobalConsistency()
		}
	}
}

func (c *DistributedStateCoordinator) runOptimizer() {
	ticker := time.NewTicker(5 * time.Minute)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			ctx := context.Background()
			if _, err := c.OptimizeStatePlacement(ctx); err != nil {
				c.logger.Error("Optimization failed", zap.Error(err))
			}
		}
	}
}

func (c *DistributedStateCoordinator) runFailureDetector() {
	ticker := time.NewTicker(10 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			if failure := c.recoveryCoordinator.failureDetector.DetectFailure(); failure != nil {
				ctx := context.Background()
				if err := c.HandleFailure(ctx, failure); err != nil {
					c.logger.Error("Failed to handle failure", zap.Error(err))
				}
			}
		}
	}
}

// Helper methods

func (c *DistributedStateCoordinator) prepareMigration(ctx context.Context, vmID, targetNode string, options MigrationOptions) (*MigrationPlan, error) {
	// Implementation would prepare migration plan
	return &MigrationPlan{
		RequiredLocks: []string{vmID, targetNode},
	}, nil
}

func (c *DistributedStateCoordinator) migrateVMStateShards(ctx context.Context, vmID, targetNode string) error {
	// Implementation would migrate VM state shards
	return nil
}

func (c *DistributedStateCoordinator) migrateMemoryState(ctx context.Context, vmID, targetNode string, options MigrationOptions) error {
	strategy := "hybrid"
	if options.Strategy != "" {
		strategy = options.Strategy
	}
	return c.memoryDistribution.MigrateLiveMemory(ctx, vmID, targetNode, strategy)
}

func (c *DistributedStateCoordinator) migrateNetworkState(ctx context.Context, vmID, targetNode string) error {
	// Implementation would migrate network state
	return nil
}

func (c *DistributedStateCoordinator) updateFederationState(ctx context.Context, vmID, targetNode string) error {
	// Implementation would update federation state
	return nil
}

func (c *DistributedStateCoordinator) rollbackMigration(ctx context.Context, tx *DistributedTransaction) error {
	// Implementation would rollback migration
	return nil
}

func (c *DistributedStateCoordinator) applyResolution(ctx context.Context, resolution *ConflictResolution) error {
	// Implementation would apply conflict resolution
	return nil
}

func (c *DistributedStateCoordinator) collectGlobalState() (*GlobalState, error) {
	// Implementation would collect global state
	return &GlobalState{}, nil
}

func (c *DistributedStateCoordinator) validateOptimizationPlan(plan *OptimizationPlan) error {
	// Implementation would validate optimization plan
	return nil
}

func (c *DistributedStateCoordinator) executeOptimizationPlan(ctx context.Context, plan *OptimizationPlan) error {
	// Implementation would execute optimization plan
	return nil
}

func (c *DistributedStateCoordinator) executeRecoveryStep(ctx context.Context, step *RecoveryStep) error {
	// Implementation would execute recovery step
	return nil
}

func (c *DistributedStateCoordinator) checkGlobalConsistency() {
	// Implementation would check global consistency
}

func (c *DistributedStateCoordinator) getShardingStatus(vmID string) (*ShardingStatus, error) {
	// Implementation would get sharding status
	return &ShardingStatus{}, nil
}

func (c *DistributedStateCoordinator) getMemoryStatus(vmID string) (*MemoryStatus, error) {
	// Implementation would get memory status
	return &MemoryStatus{}, nil
}

func (c *DistributedStateCoordinator) getFederationStatus(vmID string) (*FederationStatus, error) {
	// Implementation would get federation status
	return &FederationStatus{}, nil
}

// Supporting types and stub implementations

type StateOperation interface {
	Execute() error
	Rollback() error
}

type RollbackOperation struct {
	Operation StateOperation
	Data      interface{}
}

type ConflictType int

const (
	ConflictTypeConcurrentWrite ConflictType = iota
	ConflictTypeVersionMismatch
	ConflictTypeNetworkPartition
)

func (c ConflictType) String() string {
	switch c {
	case ConflictTypeConcurrentWrite:
		return "concurrent_write"
	case ConflictTypeVersionMismatch:
		return "version_mismatch"
	case ConflictTypeNetworkPartition:
		return "network_partition"
	default:
		return "unknown"
	}
}

type StateConflict struct {
	ID        string
	Type      ConflictType
	Nodes     []string
	Timestamp time.Time
	Data      interface{}
}

type ConflictResolution struct {
	ConflictID string
	Strategy   string
	Result     interface{}
	Timestamp  time.Time
}

type ConflictRecord struct {
	Conflict   *StateConflict
	Resolution *ConflictResolution
	Timestamp  time.Time
}

type ResolutionStrategy interface {
	Resolve(*StateConflict) (*ConflictResolution, error)
}

type MigrationOptions struct {
	Strategy         string
	Priority         int
	BandwidthLimit   int64
	CompressionLevel int
}

type MigrationPlan struct {
	RequiredLocks []string
	Steps         []MigrationStep
}

type MigrationStep struct {
	Name string
	Action func() error
}

type OptimizationPlan struct {
	ID           string
	Timestamp    time.Time
	Migrations   []PlannedMigration
	CostSavings  float64
	Performance  float64
}

type PlannedMigration struct {
	VMID       string
	SourceNode string
	TargetNode string
	Reason     string
}

type FailureEvent struct {
	Type      FailureType
	NodeID    string
	Timestamp time.Time
	Details   interface{}
}

type FailureType int

const (
	FailureTypeNodeDown FailureType = iota
	FailureTypeNetworkPartition
	FailureTypeStorageFailure
	FailureTypeMemoryCorruption
)

func (f FailureType) String() string {
	switch f {
	case FailureTypeNodeDown:
		return "node_down"
	case FailureTypeNetworkPartition:
		return "network_partition"
	case FailureTypeStorageFailure:
		return "storage_failure"
	case FailureTypeMemoryCorruption:
		return "memory_corruption"
	default:
		return "unknown"
	}
}

type RecoveryPlan struct {
	ID        string
	Failure   *FailureEvent
	Steps     []*RecoveryStep
	Timestamp time.Time
}

type RecoveryStep struct {
	Name   string
	Action func() error
}

type StateStatus struct {
	VMID               string
	Timestamp          time.Time
	ShardingStatus     *ShardingStatus
	MemoryStatus       *MemoryStatus
	FederationStatus   *FederationStatus
	ConsistencyStatus  *ConsistencyStatus
	PerformanceMetrics *PerformanceMetrics
}

type ShardingStatus struct {
	ShardCount    int
	ReplicaCount  int
	HealthyShards int
	Distribution  map[string]int
}

type MemoryStatus struct {
	TotalMemory     uint64
	DistributedMem  uint64
	HotPages        int
	ColdPages       int
	CompressionRate float64
}

type FederationStatus struct {
	ClusterCount   int
	NodeCount      int
	CrossClusterVMs int
	Bandwidth      int64
}

type ConsistencyStatus struct {
	IsConsistent bool
	LastCheck    time.Time
	Issues       []string
}

type GlobalState struct {
	VMs       map[string]*VMState
	Nodes     map[string]*NodeState
	Clusters  map[string]*ClusterState
	Timestamp time.Time
}

type VMState struct {
	ID       string
	Node     string
	Memory   uint64
	CPU      int
	State    string
}

type NodeState struct {
	ID         string
	Cluster    string
	Resources  ResourceInfo
	VMCount    int
}

type ClusterState struct {
	ID        string
	Nodes     []string
	Resources ResourceInfo
}

type ResourceInfo struct {
	CPU    int
	Memory uint64
	Disk   uint64
}

// Component stubs

func NewDistributedTransactionManager() *DistributedTransactionManager {
	return &DistributedTransactionManager{
		transactions: make(map[string]*DistributedTransaction),
		lockManager:  NewDistributedLockManager(),
		logManager:   NewTransactionLog(),
	}
}

func (m *DistributedTransactionManager) BeginTransaction(txType TransactionType) (*DistributedTransaction, error) {
	m.mu.Lock()
	defer m.mu.Unlock()

	tx := &DistributedTransaction{
		ID:          fmt.Sprintf("tx-%d", time.Now().UnixNano()),
		Type:        txType,
		State:       TransactionStatePreparing,
		VectorClock: make(map[string]uint64),
		StartTime:   time.Now(),
	}
	m.transactions[tx.ID] = tx
	return tx, nil
}

func (m *DistributedTransactionManager) EndTransaction(tx *DistributedTransaction) {
	m.mu.Lock()
	defer m.mu.Unlock()

	delete(m.transactions, tx.ID)
}

func (m *DistributedTransactionManager) CommitTransaction(tx *DistributedTransaction) error {
	m.mu.Lock()
	defer m.mu.Unlock()

	tx.State = TransactionStateCommitted
	tx.CommitTime = time.Now()
	return nil
}

type DistributedLockManager struct{}
func NewDistributedLockManager() *DistributedLockManager { return &DistributedLockManager{} }
func (l *DistributedLockManager) AcquireLocks(locks []string) ([]string, error) { return locks, nil }
func (l *DistributedLockManager) ReleaseLocks(locks []string) {}

type TransactionLog struct{}
func NewTransactionLog() *TransactionLog { return &TransactionLog{} }

func NewConflictResolver() *ConflictResolver {
	return &ConflictResolver{
		vectorClocks:    make(map[string]map[string]uint64),
		conflictHistory: []*ConflictRecord{},
		strategies:      make(map[ConflictType]ResolutionStrategy),
	}
}

func (r *ConflictResolver) GetStrategy(conflictType ConflictType) ResolutionStrategy {
	return r.strategies[conflictType]
}

func (r *ConflictResolver) RecordResolution(conflict *StateConflict, resolution *ConflictResolution) {
	r.conflictHistory = append(r.conflictHistory, &ConflictRecord{
		Conflict:   conflict,
		Resolution: resolution,
		Timestamp:  time.Now(),
	})
}

func NewGlobalOptimizer() *GlobalOptimizer {
	return &GlobalOptimizer{
		aiPredictor:      NewAIPredictionEngine(),
		costModel:        NewCostModel(),
		placementEngine:  NewPlacementOptimizer(),
		migrationPlanner: NewMigrationPlanner(),
	}
}

type AIPredictionEngine struct{}
func NewAIPredictionEngine() *AIPredictionEngine { return &AIPredictionEngine{} }
func (a *AIPredictionEngine) PredictAccessPatterns(state *GlobalState) (*AccessPredictions, error) {
	return &AccessPredictions{}, nil
}

type CostModel struct{}
func NewCostModel() *CostModel { return &CostModel{} }

type PlacementOptimizer struct{}
func NewPlacementOptimizer() *PlacementOptimizer { return &PlacementOptimizer{} }
func (p *PlacementOptimizer) CalculateOptimalPlacement(state *GlobalState, predictions *AccessPredictions) (*OptimizationPlan, error) {
	return &OptimizationPlan{}, nil
}

type MigrationPlanner struct{}
func NewMigrationPlanner() *MigrationPlanner { return &MigrationPlanner{} }

func NewStateMonitor() *StateMonitor {
	return &StateMonitor{
		performanceMetrics: NewPerformanceMetrics(),
		consistencyChecker: NewConsistencyChecker(),
		errorTracker:      NewErrorTracker(),
		alertManager:      NewAlertManager(),
	}
}

func (m *StateMonitor) RecordMigration(vmID, targetNode string, duration time.Duration) {}

type PerformanceMetrics struct{}
func NewPerformanceMetrics() *PerformanceMetrics { return &PerformanceMetrics{} }
func (p *PerformanceMetrics) GetMetrics(vmID string) *PerformanceMetrics { return p }

type ConsistencyChecker struct{}
func NewConsistencyChecker() *ConsistencyChecker { return &ConsistencyChecker{} }
func (c *ConsistencyChecker) CheckConsistency(vmID string) *ConsistencyStatus {
	return &ConsistencyStatus{IsConsistent: true, LastCheck: time.Now()}
}

type ErrorTracker struct{}
func NewErrorTracker() *ErrorTracker { return &ErrorTracker{} }

type AlertManager struct{}
func NewAlertManager() *AlertManager { return &AlertManager{} }

func NewRecoveryCoordinator() *RecoveryCoordinator {
	return &RecoveryCoordinator{
		failureDetector: NewFailureDetector(),
		recoveryPlans:   make(map[string]*RecoveryPlan),
		checkpoints:     make(map[string]*StateCheckpoint),
		recoveryLog:     NewRecoveryEventLog(),
	}
}

func (r *RecoveryCoordinator) CreateRecoveryPlan(failure *FailureEvent) (*RecoveryPlan, error) {
	return &RecoveryPlan{
		ID:        fmt.Sprintf("recovery-%d", time.Now().UnixNano()),
		Failure:   failure,
		Steps:     []*RecoveryStep{},
		Timestamp: time.Now(),
	}, nil
}

type FailureDetector struct{}
func NewFailureDetector() *FailureDetector { return &FailureDetector{} }
func (f *FailureDetector) DetectFailure() *FailureEvent { return nil }

type RecoveryEventLog struct{}
func NewRecoveryEventLog() *RecoveryEventLog { return &RecoveryEventLog{} }

func NewStateAPIServer(coordinator *DistributedStateCoordinator) *StateAPIServer {
	return &StateAPIServer{
		coordinator: coordinator,
	}
}

type GRPCServer struct{}
type RESTServer struct{}

type EventBus struct{}
func NewEventBus() *EventBus { return &EventBus{} }

type CoordinatorMetrics struct {
	MigrationsCompleted     MetricCounter
	ConflictsResolved       MetricCounter
	OptimizationsCompleted  MetricCounter
	RecoveriesCompleted     MetricCounter
}

func NewCoordinatorMetrics() *CoordinatorMetrics {
	return &CoordinatorMetrics{}
}