// Edge-to-Cloud Continuum Platform
// Seamless VM migration, edge intelligence, and 5G/6G integration

package edgecloud

import (
	"context"
	"crypto/tls"
	"encoding/json"
	"fmt"
	"math"
	"net"
	"sync"
	"sync/atomic"
	"time"

	"github.com/gorilla/websocket"
	"github.com/prometheus/client_golang/prometheus"
)

// EdgeCloudContinuum manages the edge-to-cloud infrastructure
type EdgeCloudContinuum struct {
	edgeNodes       map[string]*EdgeNode
	cloudRegions    map[string]*CloudRegion
	migrationEngine *MigrationEngine
	orchestrator    *ContinuumOrchestrator
	intelligence    *EdgeIntelligence
	network5G       *Network5GIntegration

	mu              sync.RWMutex
	metrics         *ContinuumMetrics
	config          *ContinuumConfig
}

// EdgeNode represents an edge computing node
type EdgeNode struct {
	ID           string
	Location     *GeographicLocation
	Type         EdgeNodeType
	Resources    *EdgeResources
	Connectivity *NetworkConnectivity
	Workloads    []*EdgeWorkload

	// Intelligence capabilities
	AIModel      *EdgeAIModel
	Inference    *InferenceEngine
	DataCache    *LocalCache

	// 5G/6G integration
	NetworkSlice *NetworkSlice
	MEC          *MultiAccessEdgeComputing

	// Metrics and monitoring
	Metrics      *EdgeMetrics
	Health       HealthStatus
	LastHeartbeat time.Time
}

// CloudRegion represents a cloud datacenter region
type CloudRegion struct {
	ID           string
	Name         string
	Location     *GeographicLocation
	Provider     string
	Capacity     *CloudCapacity
	Services     []*CloudService
	Connectivity *BackboneNetwork
}

// MigrationEngine handles VM/workload migration
type MigrationEngine struct {
	strategies     map[string]MigrationStrategy
	predictor      *MigrationPredictor
	optimizer      *PathOptimizer
	stateManager   *StateManager
	activeJobs     map[string]*MigrationJob
	mu             sync.RWMutex
}

// ContinuumConfig defines configuration
type ContinuumConfig struct {
	// Edge configuration
	EdgeNodes           int
	EdgeDistribution    string // uniform, clustered, random
	EdgeCapacity        ResourceSpec

	// Cloud configuration
	CloudRegions        []string
	CloudProviders      []string
	HybridCloudEnabled  bool

	// Migration settings
	MigrationPolicy     MigrationPolicy
	LiveMigration       bool
	StateTransferMethod string // rsync, criu, custom

	// Network configuration
	Enable5G            bool
	Enable6G            bool
	NetworkSlicing      bool
	SDNEnabled          bool

	// Intelligence settings
	EdgeAIEnabled       bool
	FederatedLearning   bool
	AdaptiveOptimization bool
}

// NewEdgeCloudContinuum creates a new continuum platform
func NewEdgeCloudContinuum(config *ContinuumConfig) (*EdgeCloudContinuum, error) {
	continuum := &EdgeCloudContinuum{
		edgeNodes:    make(map[string]*EdgeNode),
		cloudRegions: make(map[string]*CloudRegion),
		config:       config,
		metrics:      NewContinuumMetrics(),
	}

	// Initialize migration engine
	continuum.migrationEngine = NewMigrationEngine(config)

	// Initialize orchestrator
	continuum.orchestrator = NewContinuumOrchestrator(continuum)

	// Initialize edge intelligence
	if config.EdgeAIEnabled {
		continuum.intelligence = NewEdgeIntelligence(continuum)
	}

	// Initialize 5G/6G network integration
	if config.Enable5G || config.Enable6G {
		continuum.network5G = NewNetwork5GIntegration(config)
	}

	// Deploy edge nodes
	if err := continuum.deployEdgeNodes(); err != nil {
		return nil, err
	}

	// Connect cloud regions
	if err := continuum.connectCloudRegions(); err != nil {
		return nil, err
	}

	// Start monitoring
	go continuum.monitorContinuum()

	return continuum, nil
}

// deployEdgeNodes deploys edge computing nodes
func (c *EdgeCloudContinuum) deployEdgeNodes() error {
	for i := 0; i < c.config.EdgeNodes; i++ {
		node := &EdgeNode{
			ID:       fmt.Sprintf("edge-%d", i),
			Location: c.generateLocation(i),
			Type:     c.determineNodeType(i),
			Resources: &EdgeResources{
				CPU:    c.config.EdgeCapacity.CPU,
				Memory: c.config.EdgeCapacity.Memory,
				Storage: c.config.EdgeCapacity.Storage,
				GPU:    c.config.EdgeCapacity.GPU,
			},
			Connectivity: &NetworkConnectivity{
				Bandwidth: 1000, // Mbps
				Latency:   5,    // ms
				Protocol:  "5G",
			},
			Workloads:     make([]*EdgeWorkload, 0),
			Health:        HealthStatusHealthy,
			LastHeartbeat: time.Now(),
		}

		// Initialize AI capabilities
		if c.config.EdgeAIEnabled {
			node.AIModel = c.deployEdgeAI(node)
			node.Inference = NewInferenceEngine(node.AIModel)
		}

		// Initialize 5G/6G features
		if c.config.Enable5G {
			node.NetworkSlice = c.allocateNetworkSlice(node)
			node.MEC = NewMultiAccessEdgeComputing(node)
		}

		// Initialize local cache
		node.DataCache = NewLocalCache(100 * 1024 * 1024) // 100MB cache

		c.mu.Lock()
		c.edgeNodes[node.ID] = node
		c.mu.Unlock()
	}

	return nil
}

// connectCloudRegions connects to cloud regions
func (c *EdgeCloudContinuum) connectCloudRegions() error {
	for _, regionName := range c.config.CloudRegions {
		region := &CloudRegion{
			ID:       generateRegionID(),
			Name:     regionName,
			Location: getRegionLocation(regionName),
			Provider: c.selectProvider(regionName),
			Capacity: &CloudCapacity{
				TotalVMs:     10000,
				AvailableVMs: 8000,
				TotalStorage: 1000 * 1024 * 1024 * 1024, // 1PB
				NetworkBandwidth: 100 * 1000, // 100Gbps
			},
			Services: c.getCloudServices(regionName),
			Connectivity: &BackboneNetwork{
				Type:      "Dedicated",
				Bandwidth: 100000, // Mbps
				Redundancy: true,
			},
		}

		c.mu.Lock()
		c.cloudRegions[region.ID] = region
		c.mu.Unlock()
	}

	return nil
}

// MigrateWorkload migrates workload between edge and cloud
func (c *EdgeCloudContinuum) MigrateWorkload(workloadID string,
	source, destination string) (*MigrationResult, error) {

	// Create migration job
	job := &MigrationJob{
		ID:          generateJobID(),
		WorkloadID:  workloadID,
		Source:      source,
		Destination: destination,
		StartTime:   time.Now(),
		State:       MigrationStatePending,
	}

	// Determine migration strategy
	strategy := c.selectMigrationStrategy(source, destination)

	// Execute migration
	result, err := c.migrationEngine.Execute(job, strategy)
	if err != nil {
		return nil, err
	}

	// Update metrics
	c.metrics.RecordMigration(job, result)

	return result, nil
}

// selectMigrationStrategy selects optimal migration strategy
func (c *EdgeCloudContinuum) selectMigrationStrategy(source, destination string) MigrationStrategy {
	// Check if live migration is possible
	if c.config.LiveMigration && c.canLiveMigrate(source, destination) {
		return &LiveMigrationStrategy{
			CheckpointMethod: "CRIU",
			DeltaSync:       true,
			Compression:     true,
		}
	}

	// Check network conditions
	bandwidth := c.getNetworkBandwidth(source, destination)
	latency := c.getNetworkLatency(source, destination)

	if bandwidth > 1000 && latency < 10 {
		return &FastMigrationStrategy{
			Parallel:     true,
			Compression:  false,
			DirectTransfer: true,
		}
	}

	// Default strategy
	return &StandardMigrationStrategy{
		Compression:   true,
		Verification:  true,
		RetryAttempts: 3,
	}
}

// Edge Intelligence Implementation

// EdgeIntelligence provides AI capabilities at the edge
type EdgeIntelligence struct {
	continuum       *EdgeCloudContinuum
	models          map[string]*EdgeAIModel
	federatedLearning *FederatedLearningCoordinator
	predictor       *WorkloadPredictor
	optimizer       *PlacementOptimizer
}

// NewEdgeIntelligence creates edge intelligence system
func NewEdgeIntelligence(continuum *EdgeCloudContinuum) *EdgeIntelligence {
	return &EdgeIntelligence{
		continuum: continuum,
		models:    make(map[string]*EdgeAIModel),
		federatedLearning: NewFederatedLearningCoordinator(),
		predictor: NewWorkloadPredictor(),
		optimizer: NewPlacementOptimizer(),
	}
}

// OptimizePlacement uses AI to optimize workload placement
func (ei *EdgeIntelligence) OptimizePlacement(workload *EdgeWorkload) (*PlacementDecision, error) {
	// Collect current state
	state := ei.collectSystemState()

	// Predict future load
	prediction := ei.predictor.PredictLoad(workload, state)

	// Find optimal placement
	decision := ei.optimizer.Optimize(workload, prediction, state)

	return decision, nil
}

// TrainFederatedModel trains model across edge nodes
func (ei *EdgeIntelligence) TrainFederatedModel(modelID string) error {
	// Collect local models from edge nodes
	localModels := make(map[string]*EdgeAIModel)

	ei.continuum.mu.RLock()
	for nodeID, node := range ei.continuum.edgeNodes {
		if node.AIModel != nil {
			localModels[nodeID] = node.AIModel
		}
	}
	ei.continuum.mu.RUnlock()

	// Perform federated averaging
	globalModel := ei.federatedLearning.Aggregate(localModels)

	// Distribute updated model
	ei.distributeModel(globalModel)

	return nil
}

// 5G/6G Network Integration

// Network5GIntegration handles 5G/6G network features
type Network5GIntegration struct {
	sliceManager    *NetworkSliceManager
	mecPlatform     *MECPlatform
	beamforming     *BeamformingController
	edgeCache       *EdgeCacheNetwork
	qosManager      *QoSManager
}

// NetworkSlice represents a 5G network slice
type NetworkSlice struct {
	ID           string
	Type         SliceType
	SLA          *SliceSLA
	Resources    *SliceResources
	Endpoints    []*SliceEndpoint
	QoSProfile   *QoSProfile
}

// AllocateSlice allocates a network slice for workload
func (n *Network5GIntegration) AllocateSlice(requirements *SliceRequirements) (*NetworkSlice, error) {
	// Create slice configuration
	slice := &NetworkSlice{
		ID:   generateSliceID(),
		Type: requirements.Type,
		SLA: &SliceSLA{
			Bandwidth:     requirements.Bandwidth,
			Latency:       requirements.Latency,
			Reliability:   requirements.Reliability,
			Availability:  requirements.Availability,
		},
		Resources: &SliceResources{
			RadioResources:   n.allocateRadioResources(requirements),
			CoreResources:    n.allocateCoreResources(requirements),
			TransportResources: n.allocateTransportResources(requirements),
		},
		QoSProfile: n.createQoSProfile(requirements),
	}

	// Configure slice in network
	if err := n.sliceManager.ConfigureSlice(slice); err != nil {
		return nil, err
	}

	return slice, nil
}

// Multi-Access Edge Computing (MEC)

// MultiAccessEdgeComputing provides MEC capabilities
type MultiAccessEdgeComputing struct {
	node         *EdgeNode
	applications map[string]*MECApplication
	services     map[string]*MECService
	orchestrator *MECOrchestrator
}

// DeployMECApplication deploys application on MEC
func (mec *MultiAccessEdgeComputing) DeployMECApplication(app *MECApplication) error {
	// Validate resources
	if !mec.hasResources(app.Requirements) {
		return fmt.Errorf("insufficient MEC resources")
	}

	// Deploy application
	if err := mec.orchestrator.Deploy(app); err != nil {
		return err
	}

	// Register services
	for _, service := range app.Services {
		mec.services[service.ID] = service
	}

	mec.applications[app.ID] = app

	return nil
}

// ProcessAtEdge processes data at network edge
func (mec *MultiAccessEdgeComputing) ProcessAtEdge(data []byte) ([]byte, error) {
	// Select processing service
	service := mec.selectService(data)

	// Process data
	result, err := service.Process(data)
	if err != nil {
		return nil, err
	}

	// Cache result if applicable
	if service.Cacheable {
		mec.node.DataCache.Set(hashData(data), result)
	}

	return result, nil
}

// Advanced Migration Strategies

// LiveMigrationStrategy performs live VM migration
type LiveMigrationStrategy struct {
	CheckpointMethod string
	DeltaSync        bool
	Compression      bool
}

// Execute performs live migration
func (s *LiveMigrationStrategy) Execute(job *MigrationJob) (*MigrationResult, error) {
	result := &MigrationResult{
		JobID:     job.ID,
		StartTime: time.Now(),
	}

	// Phase 1: Pre-copy memory pages
	if err := s.preCopyPhase(job); err != nil {
		return nil, err
	}

	// Phase 2: Stop and checkpoint
	checkpoint, err := s.checkpointVM(job)
	if err != nil {
		return nil, err
	}

	// Phase 3: Transfer checkpoint
	if err := s.transferCheckpoint(checkpoint, job); err != nil {
		return nil, err
	}

	// Phase 4: Restore at destination
	if err := s.restoreVM(checkpoint, job); err != nil {
		return nil, err
	}

	result.EndTime = time.Now()
	result.Success = true
	result.DowntimeMs = s.calculateDowntime(job)

	return result, nil
}

// preCopyPhase performs iterative memory pre-copy
func (s *LiveMigrationStrategy) preCopyPhase(job *MigrationJob) error {
	iteration := 0
	dirtyPages := getAllMemoryPages(job.WorkloadID)

	for len(dirtyPages) > threshold && iteration < maxIterations {
		// Transfer dirty pages
		if err := transferPages(dirtyPages, job.Destination); err != nil {
			return err
		}

		// Get new dirty pages
		dirtyPages = getDirtyPages(job.WorkloadID, iteration)
		iteration++
	}

	return nil
}

// Continuum Orchestrator

// ContinuumOrchestrator orchestrates edge-cloud operations
type ContinuumOrchestrator struct {
	continuum       *EdgeCloudContinuum
	scheduler       *WorkloadScheduler
	loadBalancer    *LoadBalancer
	autoScaler      *AutoScaler
	faultTolerance  *FaultToleranceManager
}

// ScheduleWorkload schedules workload across continuum
func (o *ContinuumOrchestrator) ScheduleWorkload(workload *EdgeWorkload) (*ScheduleDecision, error) {
	// Analyze workload characteristics
	profile := o.analyzeWorkload(workload)

	// Determine optimal placement
	var placement string
	switch profile.Type {
	case WorkloadTypeLatencySensitive:
		placement = o.findNearestEdge(workload.UserLocation)
	case WorkloadTypeComputeIntensive:
		placement = o.findBestCloudRegion(workload)
	case WorkloadTypeDataIntensive:
		placement = o.findDataLocation(workload.DataSources)
	default:
		placement = o.scheduler.FindOptimalPlacement(workload)
	}

	// Create schedule decision
	decision := &ScheduleDecision{
		WorkloadID: workload.ID,
		Placement:  placement,
		Resources:  o.allocateResources(workload),
		StartTime:  time.Now(),
	}

	return decision, nil
}

// HandleFailure handles node/region failures
func (o *ContinuumOrchestrator) HandleFailure(failureEvent *FailureEvent) error {
	// Identify affected workloads
	affected := o.getAffectedWorkloads(failureEvent)

	// Migrate affected workloads
	for _, workload := range affected {
		// Find alternative placement
		alternative := o.findAlternativePlacement(workload, failureEvent)

		// Trigger migration
		if _, err := o.continuum.MigrateWorkload(
			workload.ID,
			failureEvent.Location,
			alternative,
		); err != nil {
			// Log error but continue with other workloads
			fmt.Printf("Failed to migrate workload %s: %v\n", workload.ID, err)
		}
	}

	return nil
}

// Metrics and Monitoring

// ContinuumMetrics tracks continuum metrics
type ContinuumMetrics struct {
	migrationCount    atomic.Uint64
	migrationLatency  *prometheus.HistogramVec
	edgeUtilization   *prometheus.GaugeVec
	cloudUtilization  *prometheus.GaugeVec
	networkBandwidth  *prometheus.GaugeVec
	failureRate       *prometheus.CounterVec
}

// RecordMigration records migration metrics
func (m *ContinuumMetrics) RecordMigration(job *MigrationJob, result *MigrationResult) {
	m.migrationCount.Add(1)

	duration := result.EndTime.Sub(result.StartTime).Seconds()
	m.migrationLatency.WithLabelValues(
		job.Source,
		job.Destination,
	).Observe(duration)
}

// monitorContinuum continuously monitors the continuum
func (c *EdgeCloudContinuum) monitorContinuum() {
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			// Monitor edge nodes
			c.monitorEdgeNodes()

			// Monitor cloud regions
			c.monitorCloudRegions()

			// Check for optimization opportunities
			c.checkOptimizationOpportunities()

			// Update intelligence models
			if c.intelligence != nil {
				c.intelligence.UpdateModels()
			}
		}
	}
}

// Types and structures

type EdgeNodeType int

const (
	EdgeNodeTypeStandard EdgeNodeType = iota
	EdgeNodeTypeGPU
	EdgeNodeTypeStorage
	EdgeNodeTypeNetwork
)

type SliceType int

const (
	SliceTypeEMBB SliceType = iota // Enhanced Mobile Broadband
	SliceTypeURLLC                  // Ultra-Reliable Low Latency
	SliceTypeMMTC                   // Massive Machine Type
)

type WorkloadType int

const (
	WorkloadTypeGeneral WorkloadType = iota
	WorkloadTypeLatencySensitive
	WorkloadTypeComputeIntensive
	WorkloadTypeDataIntensive
)

type MigrationState int

const (
	MigrationStatePending MigrationState = iota
	MigrationStateRunning
	MigrationStateCompleted
	MigrationStateFailed
)

type HealthStatus int

const (
	HealthStatusHealthy HealthStatus = iota
	HealthStatusDegraded
	HealthStatusUnhealthy
	HealthStatusUnknown
)

// Helper structures

type GeographicLocation struct {
	Latitude  float64
	Longitude float64
	City      string
	Country   string
	Region    string
}

type EdgeResources struct {
	CPU     int
	Memory  int64
	Storage int64
	GPU     int
	Network int64
}

type CloudCapacity struct {
	TotalVMs         int
	AvailableVMs     int
	TotalStorage     int64
	NetworkBandwidth int64
}

type NetworkConnectivity struct {
	Bandwidth int     // Mbps
	Latency   float64 // ms
	Protocol  string
	Jitter    float64
	PacketLoss float64
}

type EdgeWorkload struct {
	ID           string
	Name         string
	Type         WorkloadType
	Requirements *ResourceRequirements
	UserLocation *GeographicLocation
	DataSources  []string
	Priority     int
}

type MigrationJob struct {
	ID          string
	WorkloadID  string
	Source      string
	Destination string
	StartTime   time.Time
	EndTime     time.Time
	State       MigrationState
	Progress    float64
}

type MigrationResult struct {
	JobID      string
	StartTime  time.Time
	EndTime    time.Time
	Success    bool
	DowntimeMs int64
	BytesTransferred int64
	Error      error
}

// Utility functions

func generateJobID() string {
	return fmt.Sprintf("job-%d", time.Now().UnixNano())
}

func generateSliceID() string {
	return fmt.Sprintf("slice-%d", time.Now().UnixNano())
}

func generateRegionID() string {
	return fmt.Sprintf("region-%d", time.Now().UnixNano())
}